src/scanners.rs
/* Generated by re2c 3.1 */

pub fn atx_heading_start(s: &[u8]) -> Option<usize> {
    let mut cursor = 0;
    let mut marker = 0;
    let len = s.len();

    {
        #[allow(unused_assignments)]
        let mut yych: u8 = 0;
        let mut yystate: usize = 0;
        'yyl: loop {
            match yystate {
                0 => {
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    cursor += 1;
                    match yych {
                        0x23 => {
                            yystate = 3;
                            continue 'yyl;
                        }
                        _ => {
                            yystate = 1;
                            continue 'yyl;
                        }
                    }
                }
                1 => {
                    yystate = 2;
                    continue 'yyl;
                }
                2 => {
                    return None;
                }
                3 => {
                    marker = cursor;
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    match yych {
                        0x09 | 0x20 => {
                            cursor += 1;
                            yystate = 4;
                            continue 'yyl;
                        }
                        0x0A | 0x0D => {
                            cursor += 1;
                            yystate = 6;
                            continue 'yyl;
                        }
                        0x23 => {
                            cursor += 1;
                            yystate = 7;
                            continue 'yyl;
                        }
                        _ => {
                            yystate = 2;
                            continue 'yyl;
                        }
                    }
                }
                4 => {
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    match yych {
                        0x09 | 0x20 => {
                            cursor += 1;
                            yystate = 4;
                            continue 'yyl;
                        }
                        _ => {
                            yystate = 5;
                            continue 'yyl;
                        }
                    }
                }
                5 => {
                    return Some(cursor);
                }
                6 => {
                    yystate = 5;
                    continue 'yyl;
                }
                7 => {
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    match yych {
                        0x09 | 0x20 => {
                            cursor += 1;
                            yystate = 4;
                            continue 'yyl;
                        }
                        0x0A | 0x0D => {
                            cursor += 1;
                            yystate = 6;
                            continue 'yyl;
                        }
                        0x23 => {
                            cursor += 1;
                            yystate = 9;
                            continue 'yyl;
                        }
                        _ => {
                            yystate = 8;
                            continue 'yyl;
                        }
                    }
                }
                8 => {
                    cursor = marker;
                    yystate = 2;
                    continue 'yyl;
                }
                9 => {
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    match yych {
                        0x09 | 0x20 => {
                            cursor += 1;
                            yystate = 4;
                            continue 'yyl;
                        }
                        0x0A | 0x0D => {
                            cursor += 1;
                            yystate = 6;
                            continue 'yyl;
                        }
                        0x23 => {
                            cursor += 1;
                            yystate = 10;
                            continue 'yyl;
                        }
                        _ => {
                            yystate = 8;
                            continue 'yyl;
                        }
                    }
                }
                10 => {
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    match yych {
                        0x09 | 0x20 => {
                            cursor += 1;
                            yystate = 4;
                            continue 'yyl;
                        }
                        0x0A | 0x0D => {
                            cursor += 1;
                            yystate = 6;
                            continue 'yyl;
                        }
                        0x23 => {
                            cursor += 1;
                            yystate = 11;
                            continue 'yyl;
                        }
                        _ => {
                            yystate = 8;
                            continue 'yyl;
                        }
                    }
                }
                11 => {
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    match yych {
                        0x09 | 0x20 => {
                            cursor += 1;
                            yystate = 4;
                            continue 'yyl;
                        }
                        0x0A | 0x0D => {
                            cursor += 1;
                            yystate = 6;
                            continue 'yyl;
                        }
                        0x23 => {
                            cursor += 1;
                            yystate = 12;
                            continue 'yyl;
                        }
                        _ => {
                            yystate = 8;
                            continue 'yyl;
                        }
                    }
                }
                12 => {
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    match yych {
                        0x09 | 0x20 => {
                            cursor += 1;
                            yystate = 4;
                            continue 'yyl;
                        }
                        0x0A | 0x0D => {
                            cursor += 1;
                            yystate = 6;
                            continue 'yyl;
                        }
                        _ => {
                            yystate = 8;
                            continue 'yyl;
                        }
                    }
                }
                _ => {
                    panic!("internal lexer error")
                }
            }
        }
    }
}

pub fn html_block_end_1(s: &[u8]) -> bool {
    let mut cursor = 0;
    let mut marker = 0;
    let len = s.len();

    {
        #[allow(unused_assignments)]
        let mut yych: u8 = 0;
        let mut yyaccept: usize = 0;
        let mut yystate: usize = 0;
        'yyl: loop {
            match yystate {
                0 => {
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    cursor += 1;
                    match yych {
                        0x01..=0x09 | 0x0B..=0x3B | 0x3D..=0x7F => {
                            yystate = 3;
                            continue 'yyl;
                        }
                        0x3C => {
                            yystate = 4;
                            continue 'yyl;
                        }
                        0xC2..=0xDF => {
                            yystate = 5;
                            continue 'yyl;
                        }
                        0xE0 => {
                            yystate = 6;
                            continue 'yyl;
                        }
                        0xE1..=0xEC | 0xEE..=0xEF => {
                            yystate = 7;
                            continue 'yyl;
                        }
                        0xED => {
                            yystate = 8;
                            continue 'yyl;
                        }
                        0xF0 => {
                            yystate = 9;
                            continue 'yyl;
                        }
                        0xF1..=0xF3 => {
                            yystate = 10;
                            continue 'yyl;
                        }
                        0xF4 => {
                            yystate = 11;
                            continue 'yyl;
                        }
                        _ => {
                            yystate = 1;
                            continue 'yyl;
                        }
                    }
                }
                1 => {
                    yystate = 2;
                    continue 'yyl;
                }
                2 => {
                    return false;
                }
                3 => {
                    yyaccept = 0;
                    marker = cursor;
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    match yych {
                        0x01..=0x09 | 0x0B..=0x7F | 0xC2..=0xF4 => {
                            yystate = 13;
                            continue 'yyl;
                        }
                        _ => {
                            yystate = 2;
                            continue 'yyl;
                        }
                    }
                }
                4 => {
                    yyaccept = 0;
                    marker = cursor;
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    match yych {
                        0x01..=0x09 | 0x0B..=0x2E | 0x30..=0x7F | 0xC2..=0xF4 => {
                            yystate = 13;
                            continue 'yyl;
                        }
                        0x2F => {
                            cursor += 1;
                            yystate = 23;
                            continue 'yyl;
                        }
                        _ => {
                            yystate = 2;
                            continue 'yyl;
                        }
                    }
                }
                5 => {
                    yyaccept = 0;
                    marker = cursor;
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    match yych {
                        0x80..=0xBF => {
                            cursor += 1;
                            yystate = 12;
                            continue 'yyl;
                        }
                        _ => {
                            yystate = 2;
                            continue 'yyl;
                        }
                    }
                }
                6 => {
                    yyaccept = 0;
                    marker = cursor;
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    match yych {
                        0xA0..=0xBF => {
                            cursor += 1;
                            yystate = 16;
                            continue 'yyl;
                        }
                        _ => {
                            yystate = 2;
                            continue 'yyl;
                        }
                    }
                }
                7 => {
                    yyaccept = 0;
                    marker = cursor;
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    match yych {
                        0x80..=0xBF => {
                            cursor += 1;
                            yystate = 16;
                            continue 'yyl;
                        }
                        _ => {
                            yystate = 2;
                            continue 'yyl;
                        }
                    }
                }
                8 => {
                    yyaccept = 0;
                    marker = cursor;
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    match yych {
                        0x80..=0x9F => {
                            cursor += 1;
                            yystate = 16;
                            continue 'yyl;
                        }
                        _ => {
                            yystate = 2;
                            continue 'yyl;
                        }
                    }
                }
                9 => {
                    yyaccept = 0;
                    marker = cursor;
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    match yych {
                        0x90..=0xBF => {
                            cursor += 1;
                            yystate = 18;
                            continue 'yyl;
                        }
                        _ => {
                            yystate = 2;
                            continue 'yyl;
                        }
                    }
                }
                10 => {
                    yyaccept = 0;
                    marker = cursor;
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    match yych {
                        0x80..=0xBF => {
                            cursor += 1;
                            yystate = 18;
                            continue 'yyl;
                        }
                        _ => {
                            yystate = 2;
                            continue 'yyl;
                        }
                    }
                }
                11 => {
                    yyaccept = 0;
                    marker = cursor;
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    match yych {
                        0x80..=0x8F => {
                            cursor += 1;
                            yystate = 18;
                            continue 'yyl;
                        }
                        _ => {
                            yystate = 2;
                            continue 'yyl;
                        }
                    }
                }
                12 => {
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    yystate = 13;
                    continue 'yyl;
                }
                13 => match yych {
                    0x01..=0x09 | 0x0B..=0x3B | 0x3D..=0x7F => {
                        cursor += 1;
                        yystate = 12;
                        continue 'yyl;
                    }
                    0x3C => {
                        cursor += 1;
                        yystate = 15;
                        continue 'yyl;
                    }
                    0xC2..=0xDF => {
                        cursor += 1;
                        yystate = 16;
                        continue 'yyl;
                    }
                    0xE0 => {
                        cursor += 1;
                        yystate = 17;
                        continue 'yyl;
                    }
                    0xE1..=0xEC | 0xEE..=0xEF => {
                        cursor += 1;
                        yystate = 18;
                        continue 'yyl;
                    }
                    0xED => {
                        cursor += 1;
                        yystate = 19;
                        continue 'yyl;
                    }
                    0xF0 => {
                        cursor += 1;
                        yystate = 20;
                        continue 'yyl;
                    }
                    0xF1..=0xF3 => {
                        cursor += 1;
                        yystate = 21;
                        continue 'yyl;
                    }
                    0xF4 => {
                        cursor += 1;
                        yystate = 22;
                        continue 'yyl;
                    }
                    _ => {
                        yystate = 14;
                        continue 'yyl;
                    }
                },
                14 => {
                    cursor = marker;
                    if yyaccept == 0 {
                        yystate = 2;
                        continue 'yyl;
                    } else {
                        yystate = 36;
                        continue 'yyl;
                    }
                }
                15 => {
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    match yych {
                        0x01..=0x09 | 0x0B..=0x2E | 0x30..=0x3B | 0x3D..=0x7F => {
                            cursor += 1;
                            yystate = 12;
                            continue 'yyl;
                        }
                        0x2F => {
                            cursor += 1;
                            yystate = 23;
                            continue 'yyl;
                        }
                        0x3C => {
                            cursor += 1;
                            yystate = 15;
                            continue 'yyl;
                        }
                        0xC2..=0xDF => {
                            cursor += 1;
                            yystate = 16;
                            continue 'yyl;
                        }
                        0xE0 => {
                            cursor += 1;
                            yystate = 17;
                            continue 'yyl;
                        }
                        0xE1..=0xEC | 0xEE..=0xEF => {
                            cursor += 1;
                            yystate = 18;
                            continue 'yyl;
                        }
                        0xED => {
                            cursor += 1;
                            yystate = 19;
                            continue 'yyl;
                        }
                        0xF0 => {
                            cursor += 1;
                            yystate = 20;
                            continue 'yyl;
                        }
                        0xF1..=0xF3 => {
                            cursor += 1;
                            yystate = 21;
                            continue 'yyl;
                        }
                        0xF4 => {
                            cursor += 1;
                            yystate = 22;
                            continue 'yyl;
                        }
                        _ => {
                            yystate = 14;
                            continue 'yyl;
                        }
                    }
                }
                16 => {
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    match yych {
                        0x80..=0xBF => {
                            cursor += 1;
                            yystate = 12;
                            continue 'yyl;
                        }
                        _ => {
                            yystate = 14;
                            continue 'yyl;
                        }
                    }
                }
                17 => {
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    match yych {
                        0xA0..=0xBF => {
                            cursor += 1;
                            yystate = 16;
                            continue 'yyl;
                        }
                        _ => {
                            yystate = 14;
                            continue 'yyl;
                        }
                    }
                }
                18 => {
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    match yych {
                        0x80..=0xBF => {
                            cursor += 1;
                            yystate = 16;
                            continue 'yyl;
                        }
                        _ => {
                            yystate = 14;
                            continue 'yyl;
                        }
                    }
                }
                19 => {
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    match yych {
                        0x80..=0x9F => {
                            cursor += 1;
                            yystate = 16;
                            continue 'yyl;
                        }
                        _ => {
                            yystate = 14;
                            continue 'yyl;
                        }
                    }
                }
                20 => {
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    match yych {
                        0x90..=0xBF => {
                            cursor += 1;
                            yystate = 18;
                            continue 'yyl;
                        }
                        _ => {
                            yystate = 14;
                            continue 'yyl;
                        }
                    }
                }
                21 => {
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    match yych {
                        0x80..=0xBF => {
                            cursor += 1;
                            yystate = 18;
                            continue 'yyl;
                        }
                        _ => {
                            yystate = 14;
                            continue 'yyl;
                        }
                    }
                }
                22 => {
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    match yych {
                        0x80..=0x8F => {
                            cursor += 1;
                            yystate = 18;
                            continue 'yyl;
                        }
                        _ => {
                            yystate = 14;
                            continue 'yyl;
                        }
                    }
                }
                23 => {
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    match yych {
                        0x01..=0x09
                        | 0x0B..=0x3B
                        | 0x3D..=0x4F
                        | 0x51..=0x52
                        | 0x55..=0x6F
                        | 0x71..=0x72
                        | 0x75..=0x7F => {
                            cursor += 1;
                            yystate = 12;
                            continue 'yyl;
                        }
                        0x3C => {
                            cursor += 1;
                            yystate = 15;
                            continue 'yyl;
                        }
                        0x50 | 0x70 => {
                            cursor += 1;
                            yystate = 24;
                            continue 'yyl;
                        }
                        0x53 | 0x73 => {
                            cursor += 1;
                            yystate = 25;
                            continue 'yyl;
                        }
                        0x54 | 0x74 => {
                            cursor += 1;
                            yystate = 26;
                            continue 'yyl;
                        }
                        0xC2..=0xDF => {
                            cursor += 1;
                            yystate = 16;
                            continue 'yyl;
                        }
                        0xE0 => {
                            cursor += 1;
                            yystate = 17;
                            continue 'yyl;
                        }
                        0xE1..=0xEC | 0xEE..=0xEF => {
                            cursor += 1;
                            yystate = 18;
                            continue 'yyl;
                        }
                        0xED => {
                            cursor += 1;
                            yystate = 19;
                            continue 'yyl;
                        }
                        0xF0 => {
                            cursor += 1;
                            yystate = 20;
                            continue 'yyl;
                        }
                        0xF1..=0xF3 => {
                            cursor += 1;
                            yystate = 21;
                            continue 'yyl;
                        }
                        0xF4 => {
                            cursor += 1;
                            yystate = 22;
                            continue 'yyl;
                        }
                        _ => {
                            yystate = 14;
                            continue 'yyl;
                        }
                    }
                }
                24 => {
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    match yych {
                        0x01..=0x09 | 0x0B..=0x3B | 0x3D..=0x51 | 0x53..=0x71 | 0x73..=0x7F => {
                            cursor += 1;
                            yystate = 12;
                            continue 'yyl;
                        }
                        0x3C => {
                            cursor += 1;
                            yystate = 15;
                            continue 'yyl;
                        }
                        0x52 | 0x72 => {
                            cursor += 1;
                            yystate = 27;
                            continue 'yyl;
                        }
                        0xC2..=0xDF => {
                            cursor += 1;
                            yystate = 16;
                            continue 'yyl;
                        }
                        0xE0 => {
                            cursor += 1;
                            yystate = 17;
                            continue 'yyl;
                        }
                        0xE1..=0xEC | 0xEE..=0xEF => {
                            cursor += 1;
                            yystate = 18;
                            continue 'yyl;
                        }
                        0xED => {
                            cursor += 1;
                            yystate = 19;
                            continue 'yyl;
                        }
                        0xF0 => {
                            cursor += 1;
                            yystate = 20;
                            continue 'yyl;
                        }
                        0xF1..=0xF3 => {
                            cursor += 1;
                            yystate = 21;
                            continue 'yyl;
                        }
                        0xF4 => {
                            cursor += 1;
                            yystate = 22;
                            continue 'yyl;
                        }
                        _ => {
                            yystate = 14;
                            continue 'yyl;
                        }
                    }
                }
                25 => {
                    yych = unsafe {
                        if cursor < len {
                            *s.get_unchecked(cursor)
                        } else {
                            0
                        }
                    };
                    match yych {
                        0x01..=0x09
                        | 0x0B..=0x3B
                        | 0x3D..=0x42
                        | 0x44..=0x53
                        | 0x55..=0x62
                        | 0x64..=0x73
                        | 0x75..=0x7F => {
                            cursor += 1;
                            yystate = 12;
                            continue 'yyl;
                        }
                        0x3C => {
                            cursor += 1;
                            yystate = 15;
                            continue 'yyl;
                        }
                        0x43 | 0x63 => {
                            cursor += 1;
                            yystate = 28;
                            continue 'yyl;
                        }
                        0x54 | 0x74 => {
                            cursor += 1;
                            yystate = 29;
                            continue 'yyl;
                        }
                        0xC2..=0xDF => {
                            cursor += 1;
                            yystate = 16;
                            continue 'yyl;
                        }
                        0xE0 => {
                            cursor += 1;
                            yystate = 17;
                            continue 'yyl;
                        }
                        0xE1..=0xEC | 0xEE..=0xEF => {
                            cursor += 1;
                            yystate = 18;
                            continue 'yyl;
                        }
                        0xED => {
                            cursor += 1;
                            yystate = 19;
